<resources>
    <string name="app_name">Tasky</string>
    <string name="splash_text">things are being done.</string>
    <string name="author_name">Przemyslaw Pomiechowski</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Day</string>
    <string name="nav_header_subtitle">date</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_to_do">To do</string>
    <string name="menu_in_progress">In progress</string>
    <string name="menu_done">Done</string>
    <string name="menu_task">Create task</string>
</resources>