<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_to_do">

    <fragment
        android:id="@+id/nav_to_do"
        android:name="com.pomiecho.tasky.ui.home.ToDoFragment"
        android:label="@string/menu_to_do"
        tools:layout="@layout/fragment_to_do" />

    <fragment
        android:id="@+id/nav_in_progress"
        android:name="com.pomiecho.tasky.ui.gallery.InProgressFragment"
        android:label="@string/menu_in_progress"
        tools:layout="@layout/fragment_in_progress" />

    <fragment
        android:id="@+id/nav_done"
        android:name="com.pomiecho.tasky.ui.slideshow.DoneFragment"
        android:label="@string/menu_done"
        tools:layout="@layout/fragment_done" />
</navigation>