<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splash_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            android:scaleX="0.5"
            android:scaleY="0.5"
            app:srcCompat="@drawable/icon_splash" />

        <TextView
            android:id="@+id/splash_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/polly_bold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#277ACA"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/splash_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/polly_thin"
            android:text="@string/splash_text"
            android:textAlignment="center"
            android:textColor="#1E5A95"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/splash_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/author_name"
            android:textAlignment="center"
            android:textColor="#676767" />
    </LinearLayout>

</RelativeLayout>